// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexagonIcon renders correctly, by default 1`] = `
<Svg
  height={16}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 89.8 100.025"
  width={16}
  xmlns="http://www.w3.org/2000/svg"
>
  <Path
    d="M676.9,432.3l-32.7-18.9a12.17786,12.17786,0,0,1-6.1-10.6V365a12.17787,12.17787,0,0,1,6.1-10.6l32.7-18.9a12.10076,12.10076,0,0,1,12.2,0l32.7,18.9a12.17786,12.17786,0,0,1,6.1,10.6v37.8a12.17787,12.17787,0,0,1-6.1,10.6l-32.7,18.9A12.60021,12.60021,0,0,1,676.9,432.3Z"
    fill="#1a7bff"
    translate="-638.1 -333.85"
  />
</Svg>
`;

exports[`HexagonIcon renders correctly, when modified 1`] = `
<Svg
  height={32}
  preserveAspectRatio="xMidYMid meet"
  viewBox="0 0 89.8 100.025"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <Path
    d="M676.9,432.3l-32.7-18.9a12.17786,12.17786,0,0,1-6.1-10.6V365a12.17787,12.17787,0,0,1,6.1-10.6l32.7-18.9a12.10076,12.10076,0,0,1,12.2,0l32.7,18.9a12.17786,12.17786,0,0,1,6.1,10.6v37.8a12.17787,12.17787,0,0,1-6.1,10.6l-32.7,18.9A12.60021,12.60021,0,0,1,676.9,432.3Z"
    fill="#fff"
    translate="-638.1 -333.85"
  />
</Svg>
`;
